# Superllama

./: LICENSE  README.md
.claude/: settings.local.json
llm-runtime/: .gitignore  CMakeLists.txt  README.md  test_pull.bat
llm-runtime/common/: logging.cpp  logging.h  platform.h  types.h
llm-runtime/core/: attention.cpp  attention.h  mlp.cpp  mlp.h  tensor.cpp  tensor.h  transformer_block.cpp  transformer_block.h
llm-runtime/engine/: inference.cpp  inference.h  kv_cache.cpp  kv_cache.h  model_loader.cpp  model_loader.h  paging_manager.cpp  paging_manager.h  ssd_streamer.cpp  ssd_streamer.h
llm-runtime/runtime/: api_routes.cpp  api_routes.h  json_parser.cpp  json_parser.h  main.cpp  server.cpp  server.h
llm-runtime/tests/: test_main.cpp  test_paging.cpp  test_tensor.cpp
llm-runtime/ui/: index.html
